# swagger.json
@@ -44,6 +44,42 @@
         }
       }
     },
+  "/ronaldo": {
+    "get": {
+      "tags": ["Random"],
+      "summary": "Get a random Ronaldo image",
+      "produces": [
+        "image/jpeg",
+        "image/png",
+        "image/jpg"
+      ],
+      "responses": {
+        "200": {
+          "description": "Successful operation",
+          "content": {
+            "image/jpeg": {
+              "schema": {
+                "type": "string",
+                "format": "binary"
+              }
+            },
+            "image/png": {
+              "schema": {
+                "type": "string",
+                "format": "binary"
+              }
+            },
+            "image/jpg": {
+              "schema": {
+                "type": "string",
+                "format": "binary"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
     "/api/tiktok": {
       "get": {
         "tags": ["Downloader"],
